[example] fwd_bindings

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -21,6 +21,7 @@ example(custom_provider)
 example(custom_scope)
 example(deduce_scope)
 example(dynamic_bindings)
+example(fwd_bindings)
 example(hello_world)
 example(modules)
 #example(multi_bindings)
