[test] test bind_shared_ptr_ref

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -24,7 +24,7 @@ example(dynamic_bindings)
 example(fwd_bindings)
 example(hello_world)
 example(modules)
-#example(multi_bindings)
+example(multi_bindings)
 example(multiple_interfaces)
 example(pool_provider)
 example(provider)
