[multiple_bindings] refactor

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -24,7 +24,7 @@ example(dynamic_bindings)
 example(fwd_bindings)
 example(hello_world)
 example(modules)
-example(multi_bindings)
+example(multiple_bindings)
 example(multiple_interfaces)
 example(pool_provider)
 example(provider)
@@ -40,7 +40,7 @@ example(performance/create_type_without_bindings)
 
 example(extensions/bindings/constructor_bindings)
 example(extensions/injections/assisted_injection)
-#example(extensions/injections/named_parameters)
+example(extensions/injections/named_parameters)
 example(extensions/injections/xml_injection)
 example(extensions/policies/types_dumper)
 example(extensions/policies/uml_dumper)
