[example] automatic_injection

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -13,6 +13,7 @@ endfunction()
 include_directories("tutorial")
 
 example(annotations)
+example(automatic_injection)
 example(bindings)
 example(constructor_injection)
 example(constructor_signature)
