[cmake] examples fix for gnu-string-literal-operator-template

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -12,6 +12,12 @@ endfunction()
 
 include_directories("tutorial")
 
+if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-attributes")
+elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-gnu-string-literal-operator-template")
+endif()
+
 example(annotations)
 example(automatic_injection)
 example(bindings)
