[example] tmp fix for unknown attributes

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -13,7 +13,8 @@ endfunction()
 if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-attributes")
 elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unknown-attributes -Wno-gnu-string-literal-operator-template -Wno-dollar-in-identifier-extension")
+    #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unknown-attributes -Wno-gnu-string-literal-operator-template -Wno-dollar-in-identifier-extension")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-gnu-string-literal-operator-template")
 endif()
 
 example(annotations)
@@ -45,7 +46,7 @@ example(performance/create_type_without_bindings)
 
 example(extensions/bindings/constructor_bindings)
 example(extensions/injections/assisted_injection)
-example(extensions/injections/named_parameters)
+#example(extensions/injections/named_parameters)
 example(extensions/injections/xml_injection)
 example(extensions/policies/types_dumper)
 example(extensions/policies/uml_dumper)
