--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -10,13 +10,6 @@ function(example example)
     add_test(example.${tmp} example.${tmp})
 endfunction()
 
-if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-attributes")
-elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
-    #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unknown-attributes -Wno-gnu-string-literal-operator-template -Wno-dollar-in-identifier-extension")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-gnu-string-literal-operator-template")
-endif()
-
 example(annotations)
 example(automatic_injection)
 example(bindings)
@@ -46,7 +39,7 @@ example(performance/create_type_without_bindings)
 
 example(extensions/bindings/constructor_bindings)
 example(extensions/injections/assisted_injection)
-#example(extensions/injections/named_parameters)
+example(extensions/injections/named_parameters)
 example(extensions/injections/xml_injection)
 example(extensions/policies/types_dumper)
 example(extensions/policies/uml_dumper)
