--- a/.travis.yml
+++ b/.travis.yml
@@ -244,6 +244,12 @@ matrix:
   - os: osx
     osx_image: xcode7
     env: CMAKE=ON BENCHMARK=ON COMPILER=clang++
+  - os: osx
+    osx_image: xcode7.1
+    env: BJAM=clang COMPILER=clang++
+  - os: osx
+    osx_image: xcode7.1
+    env: CMAKE=ON BENCHMARK=ON COMPILER=clang++
 
 before_script:
 - git config --global user.name "Travis-CI"
