--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ matrix:
         packages:
         - xsltproc
   - os: linux
+    env: CLANG_COMPLETE=ON
+  - os: linux
     env: BJAM=clang MEMCHECK=${VALGRIND} BENCHMARK=QUICK COMPILER=/usr/local/clang-3.4/bin/clang++
     addons:
       apt:
@@ -291,6 +293,8 @@ script:
   ${MEMCHECK} cxxflags=" $CXXFLAGS" linkflags=" $LDFLAGS"); fi
 - if [ "${CMAKE}" != "" ]; then (cd build && cmake
   .. && cmake --build . && travis_wait ctest --output-on-failure); fi
+- if [ "${CLANG_COMPLETE}" != "" ]; then (find include example test -iname "*.hpp" -or -iname "*.cpp" |
+  xargs clang-format - && exit `git ls-files -m | wc -l`); fi
 - if [ "${TRAVIS_BRANCH}" == "cpp14" ] && [ "${DOCUMENTATION}" != "" ]; then (git
   clone --quiet --recursive --depth=1 --single-branch https://github.com/boostorg/boost.git
   && cd boost && ./bootstrap.sh && ./b2 headers && mkdir libs/di && cp -r ../build ../doc ../example ../include libs/di
