--- a/.travis.yml
+++ b/.travis.yml
@@ -236,12 +236,12 @@ matrix:
         - bc
         sources:
         - ubuntu-toolchain-r-test
-  - os: osx
-    osx_image: xcode6.1
-    env: BJAM=clang COMPILER=clang++
-  - os: osx
-    osx_image: xcode6.1
-    env: CMAKE=ON COMPILER=clang++
+  #- os: osx
+    #osx_image: xcode6.1
+    #env: BJAM=clang COMPILER=clang++
+  #- os: osx
+    #osx_image: xcode6.1
+    #env: CMAKE=ON COMPILER=clang++
   - os: osx
     osx_image: xcode6.4
     env: BJAM=clang COMPILER=clang++
@@ -261,10 +261,10 @@ matrix:
     osx_image: xcode7.1
     env: CMAKE=ON BENCHMARK=ON COMPILER=clang++
   - os: osx
-    osx_image: xcode7.2b1
+    osx_image: xcode7.2b3
     env: BJAM=clang COMPILER=clang++
   - os: osx
-    osx_image: xcode7.2b1
+    osx_image: xcode7.2b3
     env: CMAKE=ON BENCHMARK=ON COMPILER=clang++
 
 before_script:
