--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -58,7 +58,6 @@ test(ut/injector)
 test(ut/make_injector)
 
 test(ft/di_bind)
-test(ft/di_bind_no_memory_header)
 test(ft/di_config)
 test(ft/di_config_global_policies)
 test(ft/di_config_global_provider)
@@ -66,6 +65,8 @@ test(ft/di_errors)
 test(ft/di_inject)
 test(ft/di_injector)
 test(ft/di_modules)
+test(ft/di_no_memory_inc)
+test(ft/di_no_std_inc)
 
 test(pt/di_compile_time)
 set(CMAKE_BUILD_TYPE Release)
