--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -14,6 +14,7 @@ example(annotations)
 example(automatic_injection)
 example(bind_non_owning_ptr)
 example(bindings)
+example(configuration)
 example(constructor_injection)
 example(constructor_signature)
 example(custom_policy)
