[scopes] external -> instance refactor

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -44,7 +44,7 @@ test(ut/providers/heap)
 test(ut/providers/stack_over_heap)
 test(ut/scopes/deduce)
 test(ut/scopes/exposed)
-test(ut/scopes/external)
+test(ut/scopes/instance)
 test(ut/scopes/singleton)
 test(ut/scopes/unique)
 test(ut/type_traits/ctor_traits)
