[core] array refactor part2

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,6 +31,7 @@ test(ut/concepts/creatable)
 test(ut/concepts/providable)
 test(ut/concepts/scopable)
 test(ut/core/any_type)
+test(ut/core/array)
 test(ut/core/binder)
 test(ut/core/bindings)
 test(ut/core/dependency)
@@ -49,6 +50,7 @@ test(ut/scopes/singleton)
 test(ut/scopes/unique)
 test(ut/type_traits/ctor_traits)
 test(ut/type_traits/memory_traits)
+test(ut/type_traits/rebind_traits)
 test(ut/type_traits/scope_traits)
 test(ut/wrappers/unique)
 test(ut/wrappers/shared)
