[core] is_a + self fixes

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -24,7 +24,6 @@ example(deduce_scope)
 example(dynamic_bindings)
 example(fwd_bindings)
 example(hello_world)
-example(lazy)
 example(modules)
 example(multiple_bindings)
 example(multiple_interfaces)
@@ -41,8 +40,10 @@ example(performance/create_type_without_bindings)
 
 example(extensions/bindings/constructor_bindings)
 example(extensions/injections/assisted_injection)
+example(extensions/injections/lazy)
 example(extensions/injections/named_parameters)
 example(extensions/injections/xml_injection)
+
 example(extensions/policies/types_dumper)
 example(extensions/policies/uml_dumper)
 example(extensions/providers/mocks_provider)
