[bindings] example with deduced bind<>.to(42)

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -58,6 +58,8 @@ example(quick_user_guide/bindings1)
 example(quick_user_guide/bindings2)
 example(quick_user_guide/bindings3)
 example(quick_user_guide/bindings4)
+example(quick_user_guide/bindings5)
+example(quick_user_guide/bindings6)
 example(quick_user_guide/injections1)
 example(quick_user_guide/injections2)
 example(quick_user_guide/injections3)
